--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
       <!-- -------------------------Social Icons------------------------------- -->
       <ul class="social-icons">
         <li>
-          <a href="#"><img src="images/facebook.png" /></a>
+          <a href="https://www.facebook.com/pepsi/"
+            ><img src="images/facebook.png"
+          /></a>
         </li>
         <li>
-          <a href="#"><img src="images/twitter.png" /></a>
+          <a href="https://twitter.com/pepsi/"
+            ><img src="images/twitter.png"
+          /></a>
         </li>
         <li>
-          <a href="#"><img src="images/instagram.png" /></a>
+          <a href="https://www.instagram.com/pepsi/"
+            ><img src="images/instagram.png"
+          /></a>
         </li>
       </ul>
     </section>
